# sovd-server

./: INTEGRATION.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SERVICE_EXTENSION_GUIDE.md  build.bat  export_api  export_types.h  go.mod  go.sum  main.go  openapi.yaml  run.bat  start-integrated.bat  start-integrated.ps1  test-api.bat  test-api.ps1  test-extended-api.bat  test-integration.ps1
internal/handlers/: sovd_handler.go
internal/models/: models.go
internal/services/: sovd_service.go
pkg/uds/: adapter_client.go  uds_client.go
sovd2uds-adapter/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.ps1  build.rs  build.sh  config.toml
sovd2uds-adapter/examples/: basic_usage.rs
sovd2uds-adapter/src/: error.rs  main.rs
sovd2uds-adapter/src/config/: mod.rs
sovd2uds-adapter/src/ffi/: bindings.rs  mod.rs
sovd2uds-adapter/src/models/: mod.rs  sovd.rs  uds.rs
sovd2uds-adapter/src/server/: handlers.rs
sovd2uds-adapter/src/translation/: mod.rs
sovd2uds-adapter/src/uds/: client.rs  mod.rs
sovd2uds-adapter/tests/: test_api.py
